# bam

./: .gitignore  .gitmodules  CMakeLists.txt  OPTIONS_gen  Parameters_hist.py  Precise_view_of_parabola.py  README.md  autosave_file.py  check_dnest.sh  check_results.py  convert_uvfits_to_datafile.py  data_utils.py  fit_models_to_uvfits.py  fit_mojave_uvfits_several_ncomponents_parallel.py  fit_mojave_uvfits_single_ncomponents.py  fit_norj_with_parallels.py  get_posterior_for_sampled_runs.py  mf_utils.py  params_vis.py  postprocess.py  postprocessing_mf_utils.py  postprocessing_parallel_run.py  postprocessing_utils.py  precise_view_of_parabola.py  priors.py  run.py  tests.py
Release/: OPTIONS
data/: 0716+714_comp_number.txt  0851+202.c1.2009_02_02.uvf  0851+202.c2.2009_02_02.uvf  0851+202.k1.2009_02_02.uvf  0851+202.u1.2009_02_02.uvf  0851+202.x1.2009_02_02.uvf  0851+202.x2.2009_02_02.uvf  1308+326_comp_number.txt  test.txt
src/: Component.cpp  Component.h  DNestModel.cpp  DNestModel.h  Data.cpp  Data.h  Fixed.cpp  Fixed.h  Gaussian2D.cpp  Gaussian2D.h  LogNormal.cpp  LogNormal.h  MyConditionalPrior.cpp  MyConditionalPrior.h  SkyModel.cpp  SkyModel.h  Utils.h  equations_solvers.h  main.cpp  pydnest.cpp  utils.h
